# tkd

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/ai-ml-research/: README.md  tkd.json
examples/fastapi-backend/: README.md  tkd.json
examples/fastapi-backend/registry/commands/: plan-endpoint.md  review-openapi.md
examples/fastapi-backend/registry/configs/: lint-rules.json
examples/fastapi-backend/registry/mcp/context7/: mcp.json
examples/fastapi-backend/registry/meta/: project-context.txt
examples/fastapi-backend/registry/rules/fastapi-api/: RULE.md
examples/fastapi-backend/registry/skills/fastapi-backend/: SKILL.md
examples/fastapi-backend/registry/templates/: ci.yml
examples/indie-saas/: README.md  tkd.json
examples/oss-library/: README.md  tkd.json
examples/polyglot-enterprise/: README.md  tkd.json
src/tkd/: __init__.py  cli.py
src/tkd/adapters/: __init__.py  agent_layouts.py  agent_registry.py  antigravity.py  base.py  claude_code.py  codex.py  continuedev.py  copilot.py  cursor.py  gemini.py  kiro.py  opencode.py  roo.py  trae.py  windsurf.py
src/tkd/artifacts/: command.py  mcp.py  rule.py  skill.py
src/tkd/common/: __init__.py  files.py  models.py  workspace.py
src/tkd/config/: load.py  parse.py
src/tkd/registry/: __init__.py  git_resolver.py  local_resolver.py  resolver_base.py
tests/: conftest.py  test_artifacts.py  test_cli_integration.py  test_config.py  test_help.py  test_metadata.py
