[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tkd"
version = "0.1.0"
description = "Async multi-agent toolkit distributor for skills, rules, commands, and MCP"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [
  { name = "Codex" }
]
dependencies = [
  "pydantic>=2.10,<3",
  "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.12.0",
]

[project.scripts]
tkd = "tkd.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["tkd*"]
exclude = ["examples*", "tests*", "docs*", "build*", "dist*", "*.egg-info*", ".agents*", ".cursor*", ".claude*", ".gemini*", ".continue*", ".windsurf*", ".trae*", ".roo*", ".kiro*", ".opencode*", "AGENTS.md", "CLAUDE.md", "GEMINI.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tkd --cov-report=term-missing --cov-fail-under=70"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py38"
line-length = 100
exclude = [
  ".git",
  ".venv",
  ".tkd-cache",
  ".pytest_cache",
  ".ruff_cache",
  "__pycache__",
  "*.egg-info",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
